# toolbox_webapp

./: .dockerignore  .flake8  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Dockerfile.testmachine  README.md
.github/workflows/: ci.yml
ansible/: custom.yml  install.yml  ping.yml  test.py  uninstall.yml
ansible/inventory/: hosts  hosts.ini
ansible/roles/browsers/install/tasks/: chrome.yml  edge.yml  firefox.yml  main.yml
ansible/roles/browsers/tasks/: chrome.yml  edge.yml  firefox.yml  main.yml
ansible/roles/browsers/uninstall/tasks/: chrome.yml  edge.yml  firefox.yml  main.yml
ansible/roles/editors/install/tasks/: code.yml  emacs.yml  main.yml
ansible/roles/editors/uninstall/tasks/: code.yml  emacs.yml  main.yml
ansible/roles/languages/install/tasks/: go.yml  java.yml  main.yml  nodejs.yml  python.yml
ansible/roles/languages/uninstall/tasks/: go.yml  java.yml  main.yml  nodejs.yml  python.yml
ansible/roles/tools/tasks/: main.yml
ansible/roles/utilities/install/handlers/: main.yml
ansible/roles/utilities/install/tasks/: 7zip.yml  docker.yml  helm.yml  k3s.yml  libreoffice.yml  main.yml
ansible/roles/utilities/uninstall/defaults/: main.yml
ansible/roles/utilities/uninstall/tasks/: 7zip.yml  docker.yml  k3s.yml  libreoffice.yml  main.yml
ansible/roles/version-control/install/tasks/: git.yml  main.yml  svn.yml  tortoisesvn.yml
ansible/roles/version-control/tasks/: git.yml  main.yml  svn.yml  tortoisesvn.yml
ansible/roles/version-control/uninstall/tasks/: git.yml  main.yml  svn.yml  tortoisesvn.yml
pseudocode/python/: Ansible.pseudocode  AnsibleRootFolder.pseudocode  CustomFiles.pseudocode  File.pseudocode  Folder.pseudocode  RSAKey.pseudocode  Tags.pseudocode  Terminado.pseudocode
pseudocode/react/: code-editor.pseudocode  configure-target.pseudocode  custom-playbook.pseudocode  quick-install.pseudocode
python/: .gitignore  .pre-commit-config.yml  README.md  build_standalone.sh  poetry.toml  pyproject.toml  setup.ps1  setup.sh
python/docs/: conf.py  index.rst  toolbox.api.rst  toolbox.core.rst  toolbox.helpers.rst  toolbox.rst  toolbox.server.rst
python/docs/installation/: backend.rst  frontend.rst  index.rst
python/docs/usage/: index.rst
python/docs/usage/quickstart/: docker.rst  executable.rst  index.rst
python/src/toolbox/: __init__.py  main.py
python/src/toolbox/api/: __init__.py  custom.py  editor.py  install.py  target.py  terminal.py  uninstall.py
python/src/toolbox/core/: __init__.py  ansible.py  file.py  rsakey.py  tags.py  terminal.py
python/src/toolbox/helpers/: __init__.py  config_target.py  find_free_port.py  read_tags.py
python/src/toolbox/server/: __init__.py  main.py  mount_api.py  mount_frontend.py  terminal.py
python/src/toolbox/templates/: termpage.html  uimod.html
python/tests/api/: test_api_custom.py  test_api_editor.py  test_api_main.py  test_api_mount_frontend.py  test_api_tags_fetch.py  test_api_target_configure.py  test_api_target_install_uninstall.py  test_api_target_ping.py
python/tests/integration/: test_integration_core_ansible_run_command.py  test_integration_core_ansible_verify_auth.py  test_integration_helpers_config_target.py  test_integration_helpers_find_free_port.py  test_integration_main.py  test_integration_server_main.py  test_integration_server_terminal.py
python/tests/unit/: test_main.py  test_tags_fetch.py  test_target_configure.py  test_target_ping.py  test_unit_core_ansible.py  test_unit_core_ansible_get_command.py  test_unit_core_ansible_get_ping_command.py  test_unit_core_file.py  test_unit_core_rsakey.py  test_unit_core_tags.py  test_unit_helpers_read_tags.py  test_unit_main.py  test_unit_server_mount_api.py  test_unit_server_mount_frontend.py
python/tools/: build.py
react-frontend/: .env  .eslintrc.json  babel.config.json  package-lock.json  package.json
react-frontend/__mocks__/: react-router-dom.js
react-frontend/public/: index.html  manifest.json
react-frontend/src/: App.css  App.js  App.jsx  App.test.jsx  Routes.js  Routes.jsx  index.css  index.js  index.jsx  setupTests.js
react-frontend/src/app/: store.js
react-frontend/src/components/CodeEditor/: CodeEditor.js  CodeEditor.jsx  EditorWindow.jsx  Tree.jsx
react-frontend/src/components/ConfigureTarget/: ConfigureTarget.js  ConfigureTarget.jsx  ConfigureTarget.test.jsx
react-frontend/src/components/CustomPlaybook/: CustomForm.jsx  CustomPlaybook.jsx
react-frontend/src/components/Home/: Home.js  Home.jsx
react-frontend/src/components/Instructions/: Instructions.js  Instructions.jsx  Instructions.test.jsx
react-frontend/src/components/NavBar/: NavBar.js  NavBar.jsx  NavBar.test.jsx
react-frontend/src/components/Terminal/: Terminal.js  Terminal.jsx  Terminal.test.jsx
