[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "installer-toolbox"
version = "0.0.dev0"
description = "Toolbox webapp to install tools and software on remote and local target machines"
license = "Proprietary"
readme = "README.md"
authors = [
    "Sharath Thomas <sharathct22@gmail.com>"
]
keywords = ["toolbox", "ansible", "installler"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: Unix",
    "Programming Language :: Python",
]
packages = [
    { include = "toolbox", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9"
ansible = "^8.0.0"
cryptography = "^41.0.1"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
terminado = "^0.17.1"
tornado-xstatic = "^0.3"
xstatic = "^1.0.3"
xstatic-term-js = "^0.0.7.0"
tornado = "^6.3.2"
pywebview = "^4.2.2"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"
requests = "^2.31.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.0.1"

[tool.poetry.group.code_style.dependencies]
codespell = "^2.2.4"
pydocstyle = "^6.3.0"
black = "^23.3.0"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.group.build.dependencies]
twine = "*"
build = "*"
