[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "toolbox"
version = "0.0.dev0"
description = "Toolbox webapp to install tools and software on remote and local target machines"
license = "Proprietary"
readme = "README.md"
authors = [
    "Sharath Thomas <sharathct22@gmail.com>"
]
keywords = ["toolbox", "ansible", "installler"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: Unix",
    "Programming Language :: Python",
]
packages = [
    { include = "toolbox", from = "src" },
    { include = "toolbox/api", from = "src" },
    { include = "toolbox/ansible", from = "src" },
    { include = "toolbox/core", from = "src"},
    { include = "toolbox/helpers", from = "src"},
    { include = "toolbox/server", from = "src"},
]
include = [
    "src/toolbox/ansible/**/*",
    "src/toolbox/build/**/*",
    "src/toolbox/templates/**/*",
]

[tool.poetry.dependencies]
python = ">=3.9"
ansible = "^8.0.0"
cryptography = "^41.0.1"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
terminado = "^0.17.1"
tornado-xstatic = "^0.3"
xstatic = "^1.0.3"
xstatic-term-js = "^0.0.7.0"
tornado = "^6.3.2"
pywebview = "^4.2.2"
pywinrm = "^0.4.3"
requests-credssp = "^2.0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.3.2"
httpx = "^0.24.1"
pytest-cov = "^4.1.0"
requests = "^2.31.0"
pytest-mock = "^3.11.1"
coverage = "^7.3.0"
pytest-html = "^3.2.0"
pytest-md = "^0.2.0"

[tool.poetry.group.doc.dependencies]
sphinx = "^7.0.1"

[tool.poetry.group.code_style.dependencies]
codespell = "^2.2.4"
pydocstyle = "^6.3.0"
black = "^23.3.0"
pre-commit = "^3.3.3"
flake8 = "^6.0.0"
isort = "^5.12.0"

[tool.poetry.group.build.dependencies]
twine = "*"
build = "*"

[tool.poetry.group.dist.dependencies]
nuitka = "^1.7.9"

